Publish Go results
